force-app/main/default/objects/TASKRAY__trTaskGroup__c/TASKRAY__trTaskGroup__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay object that is used to group and organize tasks within projects.</description>
    <label>TaskRay Task Group</label>
    <nameField>
        <label>Task Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>