force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trArchived__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>