force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trEndDate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEndDate__c</fullName>
    <description>Used to track the date of when the task group is estimated (scheduled) to be completed. This date will update accordingly to accommodate any scheduling changes.</description>
    <inlineHelpText>Date of when the task group is estimated (scheduled) to be completed.</inlineHelpText>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>