force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEstimatedDuration__c</fullName>
    <description>Used to track the estimated number of days that it should take to complete the task group as scheduled. Calculated as the difference between the task group Start Date and the task group Estimated End Date.</description>
    <formula>IF( 
(TASKRAY__trEndDate__c-TASKRAY__trStartDate__c+ 1) &gt; 0, 
TASKRAY__trEndDate__c-TASKRAY__trStartDate__c+ 1, 
null 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated number of days that it should take to complete the task group as scheduled.</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>