force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TaskRay Task Groups</relationshipLabel>
    <relationshipName>trTaskGroupOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>