force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trSortOrder__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trSortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>