force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/TASKRAY__trTemplate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTemplate__c</fullName>
    <formula>TASKRAY__Project__r.TASKRAY__trTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>