force-app/main/default/objects/TASKRAY__trTaskGroup__c/listViews/TASKRAY__allTaskGroups.listView-meta.xml
<ListView>
    <fullName>TASKRAY__allTaskGroups</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__Project__c</columns>
    <columns>TASKRAY__trStartDate__c</columns>
    <columns>TASKRAY__trEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Task Groups</label>
</ListView>